--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "sqlite3": "5.0.2"
   },
   "engines": {
-    "node": "12.18.3"
+    "node": "v14.18.2"
   },
   "scripts": {
     "start": "nodemon app.js"
